--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,5 @@ dependencies {
 
 task copyWar(type: Copy, dependsOn: war) {
     from 'build/libs'
-    into '/Users/user/servers/apache-tomcat-8.0.9/webapps'
+    into '/home/lss/java/apache-tomcat-7.0.54/webapps/'
 }
